# Interactive-Sketchpad

./: .gitignore  README.md  pyproject.toml
dynamic_sketchpad/: __init__.py  assistant.py  dynamic_sketchpad.py  llm.py  openai_utils.py  tools.py
eval/: answer_extractor.py  test_answer_extractor.py
eval/isobench/: eval_mlflow.py  loader.py  prompts.py
interactive_sketchpad/: canvas.py  chatbot.py  interactive_canvas.py  main.py  prompt.py
interactive_sketchpad/.chainlit/: config.toml
interactive_sketchpad/geometry/2079/: ex.json
interactive_sketchpad/public/: stylesheet.css
